mgmt-cluster/kubevious/basic-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubevious-basicauth
spec:
  basicAuth:
    secret: basic-auth-secret
