mgmt-cluster/kubevious/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubevious-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kube.codegameeat.com`)
      services:
        - name: kubevious-ui-clusterip
          port: 80
      middlewares:
        - name: basicauth
  tls:
    certResolver: le
